# cabulous

./: .pre-commit-config.yaml  Makefile  README.md  pyrightconfig.json
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-template.md  epic-template.md  feature-fix-template.md  feature-template.md  (+1 more)
app/: Makefile  README.md
service/: .dockerignore  .env.example  .gitignore  Makefile  README.md  docker-compose.dev.yaml  docker-compose.yaml  manage.py  pyproject.toml  pyrightconfig.json
service/analytics/: admin.py  models.py
service/analytics/migrations/: 0001_initial.py  0002_alter_partystatistics_semester.py  0003_partystatistics_analytics_p_user_id_d272b8_idx_and_more.py
service/authentication/: permissions.py  serializers.py  tasks.py  urls.py  views.py
service/authentication/templates/email/authentication/: password_reset_request.html  recover_pending_onboarding.html
service/cabulous/: __init__.py  asgi.py  celery.py  config.py  settings.py  urls.py  wsgi.py
service/common/: storage_backends.py
service/common/models/: abstracts.py
service/communication/: admin.py  serializer.py  tasks.py  tests.py  urls.py  views.py  webhookhelper.py
service/communication/helpers/: __init__.py  discord_channel.py
service/communication/migrations/: 0001_initial.py
service/communication/models/: __init__.py  discord_channel.py  discord_message.py
service/communication/services/: __init__.py  discord.py  discord_message.py  email.py
service/communication/templates/discord/: bem_vindo.md  d_bem_vindo.json  embed_bem_vindo.json
service/communication/templates/discord/messages/: test_message.md  test_message.txt
service/communication/templates/email/: bem_vindo.html  test_message.html
service/core/: admin.py  models.py  tasks.py  urls.py
service/docker/app/: Dockerfile  start.sh
service/events/: constants.py  enums.py  models.py
service/events/migrations/: 0001_initial.py
service/integrations/: admin.py  urls.py  views.py
service/monitoring/: tasks.py  tests.py  urls.py  views.py
service/users/: admin.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  validators.py  views.py
service/users/migrations/: 0001_initial.py  0002_user_users_discord_idx_user_users_phone_idx_and_more.py  0003_remove_user_users_first_login_idx_and_more.py  0004_usermagiclinktoken.py  0005_alter_user_managers_user_deleted_at_and_more.py  0006_user_git_username_alter_user_discord_username.py  0006_user_git_username_user_users_git_idx.py
service/users/services/: upload_signing.py
service/users/templates/email/users/: invite_access.html
(+109 files in other folders)
